- Fixed sidebar color and table double border

--- a/RockWeb/Themes/Rock/Styles/_variables.less
+++ b/RockWeb/Themes/Rock/Styles/_variables.less
@@ -10,7 +10,7 @@
 @brand-critical: #ee7624; // #color
 
 @gray-base:              #000;
-@gray-darker:            #2d2d2d; // #color
+@gray-darker:            #3d3d3d; // #color
 @gray-dark:              #484848;   // #color
 @gray:                   #767676; // #color
 @gray-light:             #d8d8d8; // #color
