--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -318,9 +318,9 @@ textarea,
 .grid .table > thead > tr > th {
   padding: 18px 0 18px 12px;
   vertical-align: middle;
-  &:last-child {
-    border-right: 1px solid @table-border-color;
-  }
+  // &:last-child {
+  //   border-right: 1px solid @table-border-color;
+  // }
 }
 
 .grid .table > thead > tr.grid-header-bold > th {
@@ -343,9 +343,9 @@ textarea,
     vertical-align: middle;
   }
 
-  &:last-child {
-    border-right: 1px solid @table-border-color;
-  }
+  // &:last-child {
+  //   border-right: 1px solid @table-border-color;
+  // }
 }
 
 .grid .table > tfoot {
